--- a/build.cfg
+++ b/build.cfg
@@ -1,7 +1,7 @@
-url=https://github.com/kisslinux
-ver=2020.9-2
+url=https://codeberg.org/kiss-community
+ver=22.11.15
 tar="kiss-chroot-$ver.tar.xz"
-dl="$url/repo/releases/download/$ver/$tar"
+dl="$url/grepo/releases/download/$ver/$tar"
 
 isolabel=${isolabel:-kiss-live-$ver}
 
@@ -14,7 +14,7 @@ rootfsdir=${rootfsdir:-$here/rootfs}
 isodir=${isodir:-$here/iso}
 tmpdir=${tmpdir:-$here/tmp}
 
-base_pkgs="baseinit baselayout binutils busybox bzip2 curl dhcpcd flex gcc git gzip kiss libressl linux make musl wpa_supplicant xz zlib"
+base_pkgs="baseinit baselayout binutils busybox bzip2 curl dhcpcd flex gcc git gzip kiss libressl linux make wpa_supplicant xz zlib"
 
 syslinux_files="isohdpfx.bin isolinux.bin ldlinux.c32 libcom32.c32 libutil.c32"
 grub_mod="all_video cat configfile disk echo efi_gop efi_uga fat gzio help iso9660 linux ls multiboot2 normal part_gpt part_msdos search search_label test true"
